# track-wear-backend

./: .env  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Rocket.toml  postgres.sh
migrations/2022-05-28-110316_create_users/: up.sql
migrations/2022-06-06-144338_create_clothes/: down.sql  up.sql
migrations/2022-06-17-134657_cloth_to_item/: down.sql  up.sql
migrations/2022-06-17-142057_item_inventory/: down.sql  up.sql
migrations/2022-06-18-101529_tags/: down.sql  up.sql
src/: cloth_management.rs  db.rs  error.rs  main.rs  schema.rs  settings.rs  user_management.rs
src/api/: mod.rs
src/api/cloth_management/: add_wear.rs  create.rs  delete.rs  edit.rs  get_cloth.rs  list.rs  mod.rs  models.rs
src/api/item_management/: add_tag.rs  add_use.rs  create.rs  create_tag.rs  delete.rs  delete_tag.rs  edit.rs  get_item.rs  get_item_tags.rs  get_tags.rs  list.rs  mod.rs  models.rs  modify_inventory.rs  remove_tag.rs
src/api/user_management/: login.rs  mod.rs  models.rs  sessions.rs
