[package]
name = "track-wear-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
r2d2 = "0.8.9"
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
jsonwebtoken-google = "0.1.6"
rand = "0.8.5"
